<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_awal"
    tools:context=".ui.LoginActivity">
    <LinearLayout
        android:transitionName="linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4DDEDEDE">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:orientation="vertical"
            android:gravity="center|bottom">
            <ImageView
                android:transitionName="logo_image"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_marginBottom="20dp"
                android:background="#000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:transitionName="linear2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_login_LogReg"
                    android:textSize="24sp"
                    android:textColor="#94194d"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextHeadBold"/>
                <TextView
                    android:id="@+id/btn_register_login"
                    android:transitionName="linear2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_signup_LogReg"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextHeadBold"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:transitionName="linear2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:elevation="8dp"
            android:background="@drawable/linearlayout_custom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="32dp"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayout_email_login"
                    android:transitionName="email_trans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/str_email_LogReg"
                    app:hintTextAppearance="@style/TextBody"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/lin_libertine_r"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayout_password_login"
                    android:transitionName="password_trans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/str_password_LogReg"
                    app:hintTextAppearance="@style/TextBody"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#94194d"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/lin_libertine_r"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="18dp"
                    android:text="@string/str_forgetpass_LogReg"
                    android:textColor="#94194d"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextHeadBold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:paddingBottom="64dp"
                android:gravity="end">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:text="@string/str_login_LogReg"
                    android:fontFamily="@font/lin_libertine_rb"
                    app:iconGravity="end"
                    app:icon="@drawable/ic_arrow"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>